# Bubble

./: .gitignore
backend/: main.py  pyproject.toml  render.yaml  requirements.txt
backend/app/: app.py  db.py  images.py  schemas.py  users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ConfirmModal.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Feed.jsx  Home.jsx  Login.jsx  Register.jsx  Upload.jsx
